# testapp-project

./: meson.build  org.octavian.testapp.json
data/: meson.build  org.octavian.testapp.appdata.xml.in  org.octavian.testapp.desktop.in  org.octavian.testapp.gschema.xml
data/icons/: meson.build
po/: POTFILES
src/: application.vala  main.vala  meson.build  testapp.gresource.xml  window.ui  window.vala
